--- a/tik-tik/package.json
+++ b/tik-tik/package.json
@@ -16,9 +16,14 @@
     "next": "12.1.6",
     "react": "18.1.0",
     "react-dom": "18.1.0",
-    "react-google-login": "^5.2.2",
     "react-icons": "^4.3.1",
     "uuidv4": "^6.2.13",
     "zustand": "^4.0.0-rc.1"
+  },
+  "devDependencies": {
+    "@types/react": "^18.0.26",
+    "autoprefixer": "^10.4.13",
+    "postcss": "^8.4.20",
+    "tailwindcss": "^3.2.4"
   }
 }
